--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,27 +1,29 @@
 <div class="container">
+    <nav class="p-2 m-2 border border-info">
+        <button class="btn btn-outline-info" (click)="handleNewProduct()">New Product</button>
+    </nav>
     <ng-template #errors>
         <div class="text-danger">
             {{errorMessage}}
         </div>
     </ng-template>
-   
-        
     
-    <div class="card" *ngIf="products ; else errors">
+    <div class="card mt-3" *ngIf="products ; else errors">
         <div class="card-header">Products List</div>
         <div class="card-body">
             <form [formGroup]="searchFormGroup" (ngSubmit)="handleSearchProducts()">
                 <div class="input-group">
-                    <label class="input-group-text">Keyword </label>
+                    <label class="input-group-text">Keyword : </label>
                     <input type="text" name="" id="" class="form-control" formControlName = "keyword">
                     <button class="btn btn-info">
                         <i class="bi bi-search"></i>
                     </button>
                 </div>
             </form>
-            <table class="table  table-striped table-hover  table-sm table-responsive-sm">
-                <thead>
+            <table class="table  table-striped table-hover  table-sm table-responsive-sm" style="border-top: black; border-width: 5px;">
+                <thead >
                     <tr>
+                        <th><input type="checkbox" class="form-check"></th>
                         <th scope="col">ID</th>
                         <th scope="col">Name</th>
                         <th scope="col">Price</th>
@@ -29,6 +31,7 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let p of products">
+                        <td><input type="checkbox" class="form-check"></td>
                         <td>{{p.id}}</td>
                         <td>{{p.name}}</td>
                         <td>{{p.price}}</td>
@@ -41,11 +44,16 @@
                                 <span *ngIf="p.promotion == false">Promo On</span>
                             </button>
                         </td>
-                        <td>
-                            <button (click)="handleDeleteProduct(p)" class="btn btn-danger">
-                                <i class="bi bi-trash"></i>
+
+                        <td *ngIf="authService.hasRole('ADMIN')">
+                            <button (click)="handleDeleteProduct(p)" class="btn btn-danger me-1">
+                                <i class="bi bi-trash  "></i>
+                            </button>
+                            <button (click)="handleEditProduct(p)" class="btn btn-warning">
+                                <i class="bi bi-pen  "></i>
                             </button>
                         </td>
+                        
                     </tr> 
                 </tbody>
             </table>
